--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -87,6 +87,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tec-XB-YjI">
+                                <rect key="frame" x="28" y="20" width="48" height="25"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
@@ -96,6 +102,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
+                        <outlet property="currentLetterLabel" destination="Tec-XB-YjI" id="dcR-rd-I6O"/>
                         <outlet property="label1" destination="IEj-Gh-Otf" id="SX7-Ll-okG"/>
                         <outlet property="label2" destination="USI-U6-P8f" id="5vs-vx-RwU"/>
                         <outlet property="label3" destination="9p3-uW-5KH" id="GyH-5S-JwL"/>
